# Narrator

./: .gitignore  README.md  README.md.back  aliyun-bj.sh  aliyun-bj1.sh  aliyun-hz.sh  aliyun.sh  demo.cc  init.sh  readme.md
AppEnclave/: CMakeLists.txt  Makefile  attestation.edl
AppEnclave/common/: CMakeLists.txt  crypto.cpp  crypto.h  dispatcher.cpp  dispatcher.h  identity_verifier.cpp
AppEnclave/enclave/: ecalls.cpp  enc.conf
AppEnclave/host/: CMakeLists.txt  _application_state  enclave_operation.cpp  host.cpp  params.h  state_requests.cpp  state_requests.h  system_init.cpp
AppEnclave/host/network/: MyServer.cpp  MyServer.hpp  My_Server.cpp  My_Server.hpp  messages.cpp  messages.h  messages_produce.cpp  messages_produce.h  misc.h  process_buffer.cpp  process_buffer.h
ServerEnclave/: .gitignore  CMakeLists.txt  Makefile  README.md  attestation.edl  go_cover.go  quick_start.sh  start.sh  test.cc
ServerEnclave/common/: CMakeLists.txt  attestation.cpp  attestation.h  crypto.cpp  crypto.h  dispatcher.cpp  dispatcher.h  identity_verifier.cpp  log.h  utility.cpp
ServerEnclave/common/ed25519/: Curve25519.cpp  Curve25519.h  Ed25519.cpp  Ed25519.h  SHA512_ed25519.cpp  SHA512_ed25519.h
ServerEnclave/common/ed25519/utility/: CppSupport.h
ServerEnclave/enclave/: ecalls.cpp  enc.conf
ServerEnclave/host/: .gitignore  CMakeLists.txt  _configuration  configuration.cpp  configuration.h  enclave_operation.cpp  enclave_operation.h  host.cpp  params.h  process_ae_requests.cpp  process_ae_requests.hpp  secure_channel.cpp  secure_channel.h  system_init.cpp  system_init.h
ServerEnclave/host/network/: MyServer.cpp  MyServer.hpp  My_Server.cpp  My_Server.hpp  _peer_ip_allowed  _peers  configuration.h  get_ip.cpp  ip_requests.cpp  ip_requests.h  json.hpp  machine_id.cpp  message_produce.cpp  message_produce.h  message_requests.cpp  message_requests.h  misc.cpp  misc.h  process_buffer.cpp  process_buffer.h
ServerEnclave/tendermintcore/abci/example/kvstore/: kvstore.go
doc/: OverviewImplementation.md
openenclave17/: .gitignore  CMakeLists.txt
openenclave17/common/crypto/openssl/: crl.c
openenclave17/common/sgx/: collateral.c  tcbinfo.c  verifier.c
openenclave17/enclave/: attest_plugin.c
openenclave17/enclave/core/: tracee.c
openenclave17/enclave/sgx/: attester.c
openenclave17/host/: traceh.c
openenclave17/include/openenclave/bits/sgx/: sgxproperties.h
openenclave17/include/openenclave/internal/sgx/: sgxproperties.h
openenclave17/samples/Seal_and_unseal/: CMakeLists.txt  attestation.edl
openenclave17/samples/Seal_and_unseal/common/: attestation.cpp  attestation.h  crypto.h  dispatcher.cpp  dispatcher.h  log.h
openenclave17/samples/Seal_and_unseal/enclave/: CMakeLists.txt  ecalls.cpp
openenclave17/samples/Seal_and_unseal/host/: CMakeLists.txt  _application_state  enclave_operation.cpp  enclave_operation.h  host.cpp  params.h  state_requests.cpp  state_requests.h  system_init.h
openenclave17/samples/Seal_and_unseal/host/network/: MyServer.hpp  messages.cpp  messages.h  process_buffer.cpp  process_buffer.h
openenclave17/samples/Seal_and_unseal_narrator_test/: attestation.edl
openenclave17/samples/Seal_and_unseal_narrator_test/common/: common.h  dispatcher.cpp  dispatcher.h
openenclave17/samples/Seal_and_unseal_narrator_test/enclave/: ecalls.cpp  enc.conf
openenclave17/samples/Seal_and_unseal_narrator_test/host/: _application_state  host.cpp  system_init.cpp  test.file
openenclave17/samples/Seal_and_unseal_narrator_test/host/network/: MyServer.cpp  get_ip.cpp  messages.cpp  misc.cpp
openenclave17/samples/attested_tls/: CMakeLists.txt  tmp.txt
openenclave17/samples/attested_tls/common/: tls_server_enc_mrenclave.h
openenclave17/samples/attested_tls/server/: tls_server.edl
openenclave17/samples/pluggable_allocator/: CMakeLists.txt
openenclave17/tools/oesign/: oesign.c
seal-testing-for-narrator/common/: dispatcher.cpp
seal-testing-for-narrator/host/: host.cpp
tendermint-ansible/: CommonNarrator.py  CommonTendermint.py  LICENSE  README.md  narrator.py  prometheus.yml  pub_ips.txt  requirements.txt  tmtestplan.yaml  tmtk.py  utilities.py
tendermint-ansible/ansible/: deploy.yaml  fetch-logs.yaml  narrator-state.yaml  narrator_deploy.yaml  tendermint-state.yaml
tendermint-ansible/ansible/roles/install/tasks/: main.yaml
tendermint-ansible/ansible/roles/install/templates/: tendermint.service.jinja2
tendermint-ansible/ansible/roles/narrator/tasks/: main.yaml
tendermint-ansible/ansible/roles/narrator/templates/: narrator.service.jinja2
tendermint-ansible/tendermint_core/abci/example/kvstore/: kvstore.go
tesk-ansible/: .gitignore  README.md  tmtk.py
tesk-ansible/our/: sshKey.yml  sshKey.yml.save
tpm-test/: CMakeLists.txt  main.cpp  sync.sh  sys_tpm_counter.cpp  sys_tpm_counter.h  tpm_counter.cpp  tpm_counter.h  tpm_helper.cpp
tpm-test/tpm_session_test/: sys-context-util.c  sys-context-util.h  sys-entity-util.c  sys-hmac-auth.int.c  sys-hmac-auth.int2.cpp  sys-hmac-auth.int2.h  sys-session-util.c  sys-session-util.h  sys-util.c  sys-util.h  test.h
tpm-test/tpm_test_util/: aux_util.h  io.c  io.h  key-value-parse.c  key-value-parse.h  log.h  tpm2b.h
